--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dot-env": "^0.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0"
+    "express-rate-limit": "^7.4.0",
+    "pg": "^8.12.0"
   }
 }
