--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
